8299168: RISC-V: Fix MachNode size mismatch for MacroAssembler::_verify_oops*